examples/test/testpolicy7628.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7628
  namespace: namespace186
spec:
  podSelector:
    matchLabels:
      key10: value39
      key30: value40
      key22: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value43
      podSelector:
        matchLabels:
          key14: value39
